--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-text">
           <!-- <p> UI/UX Designer </p> -->
           <br>
-          <h1> Hi, I'm <span>Sylviana</span> <br>from Indonesia</h1>
+          <h1> Discover Data Depths: <span> Sylviana's</span><br>Journey in Web Design & Analytics</h1>
         </div>
       </div>
     </div>
@@ -42,6 +42,7 @@
             <img src="images/user.jpeg">
           </div>
           <div class="about-col-2"> <!-- for the description -->
+
             <h1 class="sub-title"> About Me </h1>
             <p>I am a dedicated student with a passion for programming and implementing innovative solutions. Currently, I am seeking practical experience 
               and the opportunity to apply my knowledge in a real professional environment, which is why I am pursuing an internship.</p>
@@ -164,7 +165,7 @@
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <p> <i class="fa-regular fa-paper-plane"></i> pratiwisylviana14@gmail.com</p>
-            <p> <i class="fa-solid fa-square-phone"></i>  017687237575 </p>
+            <p> <i class="fa-solid fa-square-phone"></i>  017687237474 </p>
             <div class="social-icon">
               <a href="https://instagram.com/"><i class="fa-brands fa-square-instagram"></i></a> <!-- a is for hyperlink and i is for icon-->
               <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
@@ -187,7 +188,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>Copyright © Sylviana. Made with <i class="fa-solid fa-heart"></i> by Syl</p>
+        <p>Copyright © Sylviana. Made with <i class="fa-solid fa-heart"></i> by S</p>
       </div>
     </div>
 
