--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1"> <!-- for the picture -->
-            <img src="images/user.jpeg">
+            <img src="images/user.png">
           </div>
           <div class="about-col-2"> <!-- for the description -->
 
@@ -58,7 +58,7 @@
                 <li><span>HTML/CSS</span><br>Designing Web/App Interfaces</li>
                 <li><span>JS</span><br>JavaScript for dynamic web development</li>
                 <li><span>JAVA</span><br>Object-oriented Java programming</li>
-                <li><span>MySQL</span><br>Database design, SQL queries, optimization</li>
+                <li><span>MySQL, R</span><br>Database design, SQL queries, optimization</li>
               </ul>
             </div>
 
